--- a/style.css
+++ b/style.css
@@ -1,44 +1,376 @@
 .sectionOne{
-    background-image: url(resources/Banner\ Image.png);
-    background-repeat: no-repeat;
-    text-align: center;
     width: 1320px;
     height: 600px;
     flex-shrink: 0;
     border-radius: 16px;
-
+    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    position: relative;
+    text-align: center;
 }
-.sectionOne h3, .sectionOne h1{
-    color: white;
-}
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+  .textOne{
+    color: #FFF;
+text-align: center;
+font-family: Merriweather;
+font-size: 32px;
+font-style: normal;
+font-weight: 400;
+line-height: normal;
+  }
+  .textTwo{
+    width: 632px;
+    color: #FFF;
+text-align: center;
+font-family: Merriweather;
+font-size: 72px;
+font-style: normal;
+font-weight: 900;
+line-height: 95px; /* 131.944% */
+  }
+  .off{
+    color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 88px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+  }
+  .deals{
+    color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+  }
+  .categories{
+    color: #070211;
+text-align: center;
+font-family: Inter;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+  }
 .sectionTwo{
     text-align: center;
 }
+/*Section Three Styles*/
 .sectionThree{
-    background-image: url(resources/Vectorrr.png);
-    background-repeat: no-repeat;
-    background-size: auto;
-    width: 1320px;
-height: 600px;
-}
-.sectionFour{
+    width: 100%;
+    height: 600px;
+    flex-shrink: 0;
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
+    position: relative;
     text-align: center;
 }
+.header{
+    width: 642px;
+    color: #ffff;
+font-family: Merriweather;
+font-size: 64px;
+font-style: normal;
+font-weight: 900;
+line-height: 88px; 
+letter-spacing: 7.04px;
+}
+.left{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.info{
+    width: 697px;
+    color: rgba(255, 255, 255, 0.80);
+font-family: Inter;
+font-size: 18px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px; 
+}
+.btn3{
+    color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+}
+
+/*Section Four Styles*/
+.sectionFour{
+    text-align: center;
+    width: 1320px;
+height: 482px;
+flex-shrink: 0;
+background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+}
+.red{
+    color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px; /* 175% */
+text-transform: capitalize;
+}
+.black{
+    color: #070211;
+font-family: Inter;
+font-size: 32px;
+font-style: normal;
+font-weight: 600;
+line-height: 56px;
+text-transform: capitalize;
+}
+.btn4{
+    display: inline-flex;
+padding: 16px 32px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 8px;
+background: #F00;
+}
+.btnText{
+    color: #FFF;
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+text-transform: uppercase;
+}
+.center{
+    padding-top: 10%;
+}
+
+/*Section Five Styles*/
 .sectionFive{
     display: flex;
     align-items: center;
     align-content: center;
+    width: 1600px;
+height: 735px;
 }
+.partOne{
+    width: 33%;
+}
+.partTwo{
+    width: 33%;
+}
+.partThree{
+    width: 33%;
+}
+.offer{
+    color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.coming{
+color: #070211;
+font-family: Merriweather;
+font-size: 48px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+text-transform: capitalize;
+}
+.para5{
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px; /* 160% */
+}
+.imageFive{
+    width: 364.844px;
+height: 364.844px;
+flex-shrink: 0;
+border-radius: 364.844px;
+background: url(<path-to-image>), lightgray -91.279px 0px / 150.038% 100% no-repeat;
+}
+.imageBorder{
+    width: 463px;
+height: 463px;
+flex-shrink: 0;
+border-radius: 463px;
+border: 15px solid #F00;
+}
+.year{
+    color: #F00;
+font-family: Inter;
+font-size: 48px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+.pp3{
+    width: 276px;
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px; /* 160% */
+}
+.imageSix{
+    width: 140px;
+height: 140px;
+flex-shrink: 0;
+}
+
+
+
+
+
+
+
+
+
+/*Section 6 styles*/
 .sectionSix{
     text-align: center;
+    width: 1600px;
+height: 1200px;
+background: #FFF;
 }
-.sectionEight{
-    text-align: center;
+.functional{
+    color: #070211;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.Holidays{
+    color: #F00;
+text-align: center;
+font-family: Merriweather;
+font-size: 72px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+}
+.sale{
+    color: #070211;
+font-family: Merriweather;
+font-size: 72px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+}
+.para6{
+    width: 1068;
+    color: rgba(7, 2, 17, 0.60);
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 500;
+line-height: 32px; /* 160% */
+}
+.tripleImages{
+    display: flex;
+    align-items: center;
+    align-self: center;
+    align-content: center;
+}
+.soloImage{
+    width: 300px;
+}
+
+
+
+
+
+
+
+/*Section Seven Styles*/
+.sectionSeven{
+    width: 1600px;
+height: 1200px;
+background: #FFF;
+}
+.gifts{
+    color: #F00;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+.pHeader{
+    color: #070211;
+font-family: Merriweather;
+font-size: 48px;
+font-style: normal;
+font-weight: 900;
+line-height: normal;
+text-transform: capitalize;
+}
+.pp7{
+    width: 896px;
+    color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-style: normal;
+font-weight: 400;
+line-height: 32px; /* 160% */
 }
 .image{
     width: 424px;
     height: 450px;
+    flex-shrink: 0;
+    border-radius: 16px;
+background: url(<path-to-image>), lightgray 50% / cover no-repeat;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+/*Section Eight Styles*/
+
+.sectionEight{
+    text-align: center;
+    width: 1320px;
+height: 616px;
+flex-shrink: 0;
+border-radius: 16px;
+background: rgba(255, 0, 0, 0.05);
+}
+.email{
+    width: 150px;
+height: 150px;
+flex-shrink: 0;
+
+}
+
 .Merriweather{
     font-family: 'Merriweather', serif;
 }
