--- a/style.css
+++ b/style.css
@@ -1,157 +1,181 @@
+
+/*General Styles*/
+body{
+    box-sizing: border-box;
+    width: 100%;
+    height: 7335px;
+    text-align: center;
+}
+.Merriweather{
+    font-family: 'Merriweather', serif;
+}
+.Inter{
+    font-family: 'Inter', sans-serif;
+}
+
+/*Section One Style*/
+
 .sectionOne{
-    width: 1320px;
+    width: 100%;
     height: 600px;
     flex-shrink: 0;
     border-radius: 16px;
-    background: linear-gradient(180deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
     position: relative;
     text-align: center;
+    background-color: burlywood;
+    margin-bottom: 0px;
 }
+
 .centered {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: #ffffff;
+    text-align: center;
+    font-style: normal;
   }
   .textOne{
-    color: #FFF;
-text-align: center;
-font-family: Merriweather;
-font-size: 32px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
+    font-size: 32px;
+    font-weight: 900;
+    line-height: normal;
   }
   .textTwo{
     width: 632px;
-    color: #FFF;
-text-align: center;
-font-family: Merriweather;
-font-size: 72px;
-font-style: normal;
-font-weight: 900;
-line-height: 95px; /* 131.944% */
+    font-size: 72px;
+    font-weight: 900;
+    line-height: 95px; 
   }
+
+/*Section Two Style*/
   .off{
     color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 88px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    text-align: center;
+    font-family: Inter;
+    font-size: 88px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
   }
   .deals{
     color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
   }
   .categories{
     color: #070211;
-text-align: center;
-font-family: Inter;
-font-size: 48px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    text-align: center;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
   }
 .sectionTwo{
     text-align: center;
+    background-color: aqua;
+    margin-top: -75px;
 }
+
 /*Section Three Styles*/
+
 .sectionThree{
     width: 100%;
     height: 600px;
     flex-shrink: 0;
-    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
     position: relative;
     text-align: center;
+    background-color: cadetblue;
+}
+.image3{
+    background: linear-gradient(90deg, #070211 0%, rgba(7, 2, 17, 0.00) 100%);
 }
 .header{
     width: 642px;
     color: #ffff;
-font-family: Merriweather;
-font-size: 64px;
-font-style: normal;
-font-weight: 900;
-line-height: 88px; 
-letter-spacing: 7.04px;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 88px; 
+    letter-spacing: 7px;
 }
 .left{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 40%;
+    left: 35%;
+    transform: translate(-60%, -40%);
 }
 .info{
     width: 697px;
     color: rgba(255, 255, 255, 0.80);
-font-family: Inter;
-font-size: 18px;
-font-style: normal;
-font-weight: 400;
-line-height: 30px; 
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px; 
 }
 .btn3{
+    background-color: #070211;
     color: #FFF;
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-text-transform: uppercase;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
 }
 
 /*Section Four Styles*/
 .sectionFour{
     text-align: center;
-    width: 1320px;
-height: 482px;
-flex-shrink: 0;
-background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    width: 100%;
+    height: 482px;
+    flex-shrink: 0;
+    background: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    background-color: darkolivegreen;
 }
 .red{
     color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 32px;
-font-style: normal;
-font-weight: 600;
-line-height: 56px; /* 175% */
-text-transform: capitalize;
+    text-align: center;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px; 
+    text-transform: capitalize;
 }
 .black{
     color: #070211;
-font-family: Inter;
-font-size: 32px;
-font-style: normal;
-font-weight: 600;
-line-height: 56px;
-text-transform: capitalize;
+    font-family: Inter;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 56px;
+    text-transform: capitalize;
 }
 .btn4{
     display: inline-flex;
-padding: 16px 32px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-border-radius: 8px;
-background: #F00;
+    padding: 16px 32px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 8px;
+    background: #F00;
 }
 .btnText{
     color: #FFF;
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-text-transform: uppercase;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-transform: uppercase;
 }
 .center{
     padding-top: 10%;
@@ -162,8 +186,8 @@ text-transform: uppercase;
     display: flex;
     align-items: center;
     align-content: center;
-    width: 1600px;
-height: 735px;
+    width: 100%;
+    height: 735px;
 }
 .partOne{
     width: 33%;
@@ -176,325 +200,301 @@ height: 735px;
 }
 .offer{
     color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    text-align: center;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .coming{
-color: #070211;
-font-family: Merriweather;
-font-size: 48px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
-text-transform: capitalize;
+    color: #070211;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
 }
 .para5{
     color: rgba(7, 2, 17, 0.60);
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 160% */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; 
 }
 .imageFive{
     width: 364.844px;
-height: 364.844px;
-flex-shrink: 0;
-border-radius: 364.844px;
-background: url(<path-to-image>), lightgray -91.279px 0px / 150.038% 100% no-repeat;
+    height: 364.844px;
+    flex-shrink: 0;
+    border-radius: 364.844px;
+    background: url(<path-to-image>), lightgray -91.279px 0px / 150.038% 100% no-repeat;
 }
 .imageBorder{
     width: 463px;
-height: 463px;
-flex-shrink: 0;
-border-radius: 463px;
-border: 15px solid #F00;
+    height: 463px;
+    flex-shrink: 0;
+    border-radius: 463px;
+    border: 15px solid #F00;
 }
 .year{
     color: #F00;
-font-family: Inter;
-font-size: 48px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
 .pp3{
     width: 276px;
     color: rgba(7, 2, 17, 0.60);
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 160% */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; /* 160% */
 }
 .imageSix{
     width: 140px;
-height: 140px;
-flex-shrink: 0;
+    height: 140px;
+    flex-shrink: 0;
 }
-
-
-
-
-
-
-
 
 
 /*Section 6 styles*/
 .sectionSix{
     text-align: center;
-    width: 1600px;
-height: 1200px;
-background: #FFF;
+    width: 100%;
+    height: 1200px;
+    background: #FFF;
 }
 .functional{
     color: #070211;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .Holidays{
     color: #F00;
-text-align: center;
-font-family: Merriweather;
-font-size: 72px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
+    text-align: center;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
 }
 .sale{
     color: #070211;
-font-family: Merriweather;
-font-size: 72px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
+    font-family: Merriweather;
+    font-size: 72px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
 }
 .para6{
-    width: 1068;
+    width: 100%;
     color: rgba(7, 2, 17, 0.60);
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: 32px; /* 160% */
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 32px; 
 }
 .tripleImages{
+    width: 100%;
     display: flex;
     align-items: center;
     align-self: center;
     align-content: center;
+    margin-bottom: -10px;
 }
 .soloImage{
-    width: 300px;
+    margin-top: -100px;
+    width: 100%;
 }
+.middleImage{
 
-
-
-
-
-
+}
+.firstImage{
+    width: 50%;
+    background-color: rgb(230, 227, 227);
+    height: 600px;
+}
+.thirdImage{
+    width: 50%;
+    height: 600px;
+}
 
 /*Section Seven Styles*/
 .sectionSeven{
-    width: 1600px;
-height: 1200px;
-background: #FFF;
+    width: 100%;
+    height: 1200px;
+    background: #a59f9f;
 }
 .gifts{
     color: #F00;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .pHeader{
     color: #070211;
-font-family: Merriweather;
-font-size: 48px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
-text-transform: capitalize;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
 }
 .pp7{
     width: 896px;
     color: rgba(7, 2, 17, 0.60);
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 160% */
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; 
 }
 .image{
     width: 424px;
     height: 450px;
     flex-shrink: 0;
     border-radius: 16px;
-background: url(<path-to-image>), lightgray 50% / cover no-repeat;
+    background: url(<path-to-image>), lightgray 50% / cover no-repeat;
 }
-
-
-
-
-
-
-
-
-
-
-
 
 /*Section Eight Styles*/
 
 .sectionEight{
     text-align: center;
-    width: 1320px;
-height: 616px;
-flex-shrink: 0;
-border-radius: 16px;
-background: rgba(255, 0, 0, 0.05);
+    width: 100%;
+    height: 616px;
+    flex-shrink: 0;
+    border-radius: 16px;
+    background: rgba(255, 0, 0, 0.05);
 }
 .email{
     width: 150px;
-height: 150px;
-flex-shrink: 0;
+    height: 150px;
+    flex-shrink: 0;
 
 }
 .Subscribe{
     color: #070211;
-text-align: center;
-font-family: Merriweather;
-font-size: 48px;
-font-style: normal;
-font-weight: 900;
-line-height: normal;
-text-transform: capitalize;
+    text-align: center;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: normal;
+    text-transform: capitalize;
 }
 .lastP{
     width: 896px;
     color: rgba(7, 2, 17, 0.60);
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: 32px; /* 160% */
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 32px; 
 }
 .inp{
     width: 648px;
-height: 72px;
-flex-shrink: 0;
-border-radius: 50px;
-background: #FFF;
-color: #ffffff;
-}
+    height: 72px;
+    flex-shrink: 0;
+    border-radius: 50px;
+    background: #FFF;
+    color: #ffffff;
+    }
 .btnS{
     width: 210px;
-height: 72px;
-flex-shrink: 0;
-margin-left: -215px;
-border-radius: 0px 50px 50px 0px;
-background: #FF0000;
+    height: 72px;
+    flex-shrink: 0;
+    margin-left: -215px;
+    border-radius: 0px 50px 50px 0px;
+    background: #FF0000;
 }
 .btnT{
     color: #FFF;
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-text-transform: capitalize;
+    text-align: center;
+    font-family: Inter;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
 }
-
-
-
-
-
-
-
-.Merriweather{
-    font-family: 'Merriweather', serif;
-}
-.Inter{
-    font-family: 'Inter', sans-serif;
-}
-
 
 footer{
-    width: 1600px;
+    width: 100%;
     height: 609px;
-flex-shrink: 0;
-background-color: #070211;
+    flex-shrink: 0;
+    background-color: #070211;
 }
 .fPara{
     color: #FFF;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: 40px; 
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px; 
 }
 .phone{
     width: 24px;
-height: 24px;
-flex-shrink: 0;
+    height: 24px;
+    flex-shrink: 0;
 }
 .website{
     width: 24px;
-height: 24px;
-flex-shrink: 0;
-color: #ffffff;
+    height: 24px;
+    flex-shrink: 0;
+    color: #ffffff;
 }
 .mobile{
     color: #FFF;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: 40px; /* 166.667% */
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px; 
 }
 .site{
     color: #FFF;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: 40px; /* 166.667% */
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 40px; 
 }
 .copy{
     color: #FFF;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .lastU{
     color: #FFF;
-font-family: Inter;
-font-size: 24px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
+    font-family: Inter;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .icon{
     width: 64px;
-height: 64px;
-flex-shrink: 0;
+    height: 64px;
+    flex-shrink: 0;
 }
 .row1{
     display: flex;
+    width: 100%;
+    justify-content: space-between;
+    
 }
 .row2{
     display: flex;
@@ -502,4 +502,7 @@ flex-shrink: 0;
 }
 .row3{
     display: flex;
+}
+.inline{
+    display: inline-block;
 }
