--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     border-radius: 16px;
     position: relative;
     text-align: center;
-    background-color: burlywood;
+    background-color: rgb(85, 85, 85);
     margin-bottom: 0px;
 }
 
@@ -305,27 +305,39 @@ body{
 .tripleImages{
     width: 100%;
     display: flex;
-    align-items: center;
-    align-self: center;
-    align-content: center;
     margin-bottom: -10px;
+    position: relative;
+    box-sizing: border-box;
+    overflow: hidden;
 }
 .soloImage{
     margin-top: -100px;
-    width: 100%;
+    width: 1200px;
+    position: absolute;
+    z-index: -1;
 }
 .middleImage{
-
+    position: absolute;
+    z-index: 3;
+    left: 39%;
+    top: 100px;
 }
 .firstImage{
     width: 50%;
-    background-color: rgb(230, 227, 227);
+    background-color: rgb(105, 201, 113);
     height: 600px;
+    border-radius: 5%;
 }
 .thirdImage{
     width: 50%;
-    height: 600px;
+    height: 800px;
+    position: absolute;
+    z-index: 2;
+    left: 50%;
+    top: 0px;
+    opacity: 0.9;
 }
+
 
 /*Section Seven Styles*/
 .sectionSeven{
@@ -350,13 +362,16 @@ body{
     text-transform: capitalize;
 }
 .pp7{
-    width: 896px;
+    width: 100%;
     color: rgba(7, 2, 17, 0.60);
     font-family: Inter;
     font-size: 20px;
     font-style: normal;
     font-weight: 400;
     line-height: 32px; 
+}
+.divided{
+    text-align: left;
 }
 .image{
     width: 424px;
@@ -392,7 +407,7 @@ body{
     text-transform: capitalize;
 }
 .lastP{
-    width: 896px;
+    width: 100%;
     color: rgba(7, 2, 17, 0.60);
     text-align: center;
     font-family: Inter;
@@ -403,7 +418,7 @@ body{
 }
 .inp{
     width: 648px;
-    height: 72px;
+    height: 52px;
     flex-shrink: 0;
     border-radius: 50px;
     background: #FFF;
@@ -411,7 +426,7 @@ body{
     }
 .btnS{
     width: 210px;
-    height: 72px;
+    height: 60px;
     flex-shrink: 0;
     margin-left: -215px;
     border-radius: 0px 50px 50px 0px;
